Another attempt to improve compatibility with current Genshi trunk. This time, the changes should also work with versions if Genshi prior to revision 510. There are still some areas not fixed, such as ticket queries, search, and the admin.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5164 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/diff_view.html
+++ b/trac/templates/diff_view.html
@@ -49,7 +49,7 @@
         <dt class="property author">Author:</dt>
         <dd class="author" py:choose="">
           <em py:when="multi" class="multi">(multiple changes)</em>
-          <py:otherwise>${authorinfo(change.author)} <span py:if="change.ipnr" class="ipnr">(IP: $change.ipnr)</span></py:otherwise>
+          <py:otherwise>${authorinfo(change.author)} <span py:if="'ipnr' in change" class="ipnr">(IP: $change.ipnr)</span></py:otherwise>
         </dd>
         <dt class="property message">Comment:</dt>
         <dd class="message" py:choose="">
@@ -68,7 +68,7 @@
           </dl>
         </div>
 
-        <xi:include href="diff_div.html"/>
+        <xi:include href="diff_div.html" py:with="no_id=False"/>
 
       </div>
     </div>
