More Genshi trunk compatibility fixes (prefs, search, admin, about)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5165 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_components.html
+++ b/trac/admin/templates/admin_components.html
@@ -28,8 +28,8 @@
       </div>
     </py:def>
 
-    <py:choose>
-      <form py:when="component" class="mod" id="modcomp" method="post">
+    <py:choose test="view">
+      <form py:when="'detail'" class="mod" id="modcomp" method="post">
         <fieldset>
           <legend>Modify Component:</legend>
           <div class="field">
