--- a/trac/templates/macros.html
+++ b/trac/templates/macros.html
@@ -142,7 +142,7 @@
         </py:choose>
         Try <a href="$preview.raw_href">downloading</a> the file instead.
       </p>
-      <py:when test="preview.errors">
+      <py:when test="'errors' in preview">
         <p>
           <strong>HTML preview not available</strong>.
           To view, <a href="$preview.raw_href">download</a> the file.
