--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -46,7 +46,7 @@
       <div id="jumprev">
         <form action="" method="get">
           <div>
-            <label for="rev" title="${sticky_rev and 'Hint: clear the field to view latest revision' or None}">
+            <label for="rev" title="${stickyrev and 'Hint: clear the field to view latest revision' or None}">
               View revision:</label>
             <input type="text" id="rev" name="rev" value="$stickyrev" size="6" />
           </div>
@@ -89,7 +89,7 @@
             </tr>
           </thead>
           <tbody>
-            <py:if test="chrome.links.up">
+            <py:if test="'up' in chrome.links">
               <tr class="even">
                 <td class="name" colspan="5">
                   <a class="parent" title="Parent Directory" href="${chrome.links.up[0].href}">../</a>
@@ -167,7 +167,7 @@
         </tr>
       </table>
 
-      <div py:if="file.preview" id="preview" class="searchable">
+      <div py:if="file and file.preview" id="preview" class="searchable">
         ${preview_file(file.preview)}
       </div>
 
